--- a/Style.CSS
+++ b/Style.CSS
@@ -1,8 +1,8 @@
 :root {
-    --branco-principal: #FFFFFF;
-    --cinza-secundario: #C0C0C0;
-    --botao-azul: #167BF7;
-    --cor-de-fundo: #00030C;
+    --branco-principal: #faf3f3;
+    --cinza-secundario: #d2cece;
+    --botao-azul: #0366de;
+    --cor-de-fundo: #070101;
     --fonte-principal: 'Inter';
     --botao-azul-efeito: #3c92fa;
 }
@@ -21,7 +21,7 @@ body {
 }
 
 .principal {
-    background-image: url("img/Background.png");
+    background-image: url("Background.png");
     background-repeat: no-repeat;
     background-size: contain;
     align-items: center;
@@ -151,5 +151,5 @@ body {
 
 .container__botao:hover {
     background-color: var(--botao-azul-efeito);
-    color: var(--cor-de-fundo);
+    color: var(--cor --cor-de-fundo);
 }
